2001-12-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Add CDB support.

	* config-filter.ht: Document CDB support.

	* results.ht (Links): Update personal SPAM statistics.

	* faq.ht (Links): Add cygwin usage information to the Windows
	client section.

2001-11-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht: Document the <> match expression.

	* config-pre.ht (address_pipe): A better way of setting EXTENSION
	under Exim.  Removing the leading character from a string is
	done faster and easier with ${substr rather than ${sg.
	
2001-11-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht (Links): Add links to each of the FAQ items for easier
	navigation.  Patch contributed by Lou Hevly.

2001-11-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht (Links): Point the list2dbm link at an updated
	version.
	
	* resources.ht (Links): Link to Francisco Sam Castillo's
	QAdmin-TMDA.
	
	* faq.ht (Links): Added "How do I setup TMDA with vpopmail?"
	and "Does TMDA have a web interface?".  Also added summary of
	questions at the top.

	* resources.ht (Links): Link to Lou Hevly's TMDA/vpopmail
	tutorial.
	
2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Add DBM support.

	* config-filter.ht (source): Better DBM documentation including
	links to the list2dbm/printdbm scripts.

2001-11-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht (Links): Amend "whitelist" Q to reflect use of filter
	files.  Also moved the wildcard docs into config-filter.

	* config-client.ht: Update documentation to reflect new TMDA
	filter files.

	* config-server.ht: Ditto.

	* config-filter.ht: New file documenting TMDA filter files.
	
2001-11-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add tmda-dated-address configuration