@@ -10,10 +10,6 @@ Download the latest release:<br><br>
 <ul>
 <li><a href="http://sourceforge.net/project/showfiles.php?group_id=24680" TARGET="Resource Window">
 Sourceforge</a><br>
-<li><a href="http://gd.tuwien.ac.at/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Central Europe)</a><br>
-<li><a href="ftp://ftp.kddlabs.co.jp/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Japan)</a><br>
 </ul>
 <br>
 
@@ -21,11 +17,6 @@ Mirror Site (Japan)</a><br>
 <ul>
 <li><a href="http://sourceforge.net/project/showfiles.php?group_id=24680" TARGET="Resource Window">
 Sourceforge</a><br>
-<li><a href="http://rpmfind.net/linux/sourceforge/tmda/" TARGET="Resource Window">rpmfind.net</a><br>
-<li><a href="http://gd.tuwien.ac.at/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Central Europe)</a><br>
-<li><a href="ftp://ftp.kddlabs.co.jp/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Japan)</a><br>
 </ul>
 <br>
 
