@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Nov 16 15:29:13 2001 -->
+<!-- Tue Dec  4 09:39:17 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -135,10 +135,6 @@ Download the latest release:<br><br>
 <ul>
 <li><a href="http://sourceforge.net/project/showfiles.php?group_id=24680" TARGET="Resource Window">
 Sourceforge</a><br>
-<li><a href="http://gd.tuwien.ac.at/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Central Europe)</a><br>
-<li><a href="ftp://ftp.kddlabs.co.jp/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Japan)</a><br>
 </ul>
 <br>
 
@@ -146,11 +142,6 @@ Mirror Site (Japan)</a><br>
 <ul>
 <li><a href="http://sourceforge.net/project/showfiles.php?group_id=24680" TARGET="Resource Window">
 Sourceforge</a><br>
-<li><a href="http://rpmfind.net/linux/sourceforge/tmda/" TARGET="Resource Window">rpmfind.net</a><br>
-<li><a href="http://gd.tuwien.ac.at/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Central Europe)</a><br>
-<li><a href="ftp://ftp.kddlabs.co.jp/sourceforge/tmda/" TARGET="Resource Window">
-Mirror Site (Japan)</a><br>
 </ul>
 <br>
 
